[package]
name = "eq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = {version = "1.0.0-alpha.4", features = ["label"]}
ariadne = "0.3.0"
slotmap = "1.0.6"
fxhash = "0.2.1"
im-rc = "15.1.0"
